--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
 
   <!----------ATM----->
   <h2>ATM</h2>
+  <h4>Please insert your card</h4>
+<button onclick="atmPin()" >Submit</button>
 
 <h4>Inquiry(Balance)</h4>
 <button onclick="atmm()" >Submit</button>
